--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "https": "^1.0.0",
+    "iconv-lite": "^0.6.3",
+    "request": "^2.88.2"
   }
 }
